fix: event RWD on mobile
-change the card size

--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -535,6 +535,12 @@
             max-width: 50%;
             margin: 0 auto;
         }
+
+        @include phone {
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+        }
     }
 
     .swiper-pagination-bullet {
